Fixing overlapping card #3

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -166,7 +166,6 @@ ul.list li {
 .overlapped-item>div:last-child {
     position: relative;
     background-color: white;
-    width: 100%;
     margin: 0 3.5rem;
     padding: 2rem;
     border-radius: calc(var(--size) * 4);
